--- a/autogpts/osGPT/.env.example
+++ b/autogpts/osGPT/.env.example
@@ -1,8 +1,12 @@
 # Your OpenAI API Key. If GPT-4 is available it will use that, otherwise will use 3.5-turbo
 OPENAI_API_KEY=abc
+SERPAPI_API_KEY=abc
 
 # Control log level
 LOG_LEVEL=INFO
 DATABASE_STRING="sqlite:///agent.db"
 PORT=8000
-AGENT_WORKSPACE="agbenchmark_config/workspace"
+
+WORKSPACE_NAME="Oscorp"
+WORKSPACE_BASE_PATH="agbenchmark_config/workspace"
+MAX_STEPS_PER_PAGE=1000
