--- a/autogpts/osGPT/pyproject.toml
+++ b/autogpts/osGPT/pyproject.toml
@@ -25,6 +25,7 @@ selenium = "^4.13.0"
 bs4 = "^0.0.1"
 webdriver-manager = "^4.0.1"
 google-search-results = "^2.4.2"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.12.0"
