--- a/autogpts/osGPT/pyproject.toml
+++ b/autogpts/osGPT/pyproject.toml
@@ -28,6 +28,7 @@ agbenchmark = { path = "../../benchmark", optional = true }
 webdriver-manager = "^4.0.1"
 google-search-results = "^2.4.2"
 requests = "^2.31.0"
+langchain = "^0.0.320"
 
 [tool.poetry.extras]
 benchmark = ["agbenchmark"]
