--- a/autogpts/osGPT/pyproject.toml
+++ b/autogpts/osGPT/pyproject.toml
@@ -29,6 +29,7 @@ webdriver-manager = "^4.0.1"
 google-search-results = "^2.4.2"
 requests = "^2.31.0"
 langchain = "^0.0.320"
+langchain-experimental = "^0.0.32"
 
 [tool.poetry.extras]
 benchmark = ["agbenchmark"]
