Major update to prompts and addition of VectorStore.

--- a/autogpts/osGPT/.env.example
+++ b/autogpts/osGPT/.env.example
@@ -10,3 +10,5 @@ PORT=8000
 WORKSPACE_NAME="Oscorp"
 WORKSPACE_BASE_PATH="agbenchmark_config/workspace"
 MAX_STEPS_PER_PAGE=1000
+WEAVIATE_API_KEY=abc
+WEAVIATE_URL=abc
